github page update

--- a/algorithm/基础算法/双指针.md
+++ b/algorithm/基础算法/双指针.md
@@ -34,7 +34,7 @@
 2. 在循环体中将左右指针相向移动，当满足一定条件时，将左指针右移（$left+1$）。当满足另外一定条件时，将右指针左移（$right-1$）
 3. 直到两指针相撞（$left=right$），或者满足其他要求的特殊条件时，跳出循环体
 
-![](image/image_Iedp3CrDbB.png)
+![](../image/image_Iedp3CrDbB.png)
 
 ## 2.3 例题
 
@@ -64,7 +64,7 @@
    当满足另外一定条件时（也可能不需要满足条件），将快指针右移，即$r+1$，**保持**$[l, r]$**为合法区间**
 3. 到指针移动到数组尾端（即$l=n$且$r=n$），或者两指针相交，或者满足其他特殊条件时跳出循环体
 
-![](image/image_WWrDAjgQ-x.png)
+![](../image/image_WWrDAjgQ-x.png)
 
 ## 3.3 例题
 
