--- a/leetcode/5-周赛/第419场周赛/3320. 统计能获胜的出招序列数.md
+++ b/leetcode/5-周赛/第419场周赛/3320. 统计能获胜的出招序列数.md
@@ -9,9 +9,9 @@
 
 1. $i$：当前处理到字符串 $s$ 的第 $i$ 个位置
 2. $score$：处理完 $s[0] \sim s[i - 1]$ 后所得到的分数，如果本回合 Bob 赢则加 1 分，Alice 赢则减 1 分，平手加 0 分
-3. $last\_c$：记录 Bob 上一个回合召唤的生物
+3. $last\\_c$：记录 Bob 上一个回合召唤的生物
 
-之后开始搜索，遍历 "WEF" 中的每一个字符，如果和 $last\_c$ 相等，则跳过。接下来判断是分胜负还是平手，最后 dfs 搜索的结果即为答案。
+之后开始搜索，遍历 "WEF" 中的每一个字符，如果和 $last\\_c$ 相等，则跳过。接下来判断是分胜负还是平手，最后 dfs 搜索的结果即为答案。
 
 - 时间复杂度: $O(3^{n})$，$n$ 为字符串 $s$ 的长度，理论上肯定小于这个复杂度，因为对于重复的状态只计算一次
 - 空间复杂度: $O(1)$
