--- a/leetcode/5-周赛/第419场周赛/3318. 计算子数组的 x-sum I.md
+++ b/leetcode/5-周赛/第419场周赛/3318. 计算子数组的 x-sum I.md
@@ -14,6 +14,8 @@
 - 时间复杂度: $O(n \times klogk)$，$n$ 为数组 $nums$ 的长度，$k$ 为哈希表 $cnt$ 的最大长度
 - 空间复杂度: $O(k)$
 
+##### Python3
+
 ```python
 class Solution:
     def findXSum(self, nums: List[int], k: int, x: int) -> List[int]:
