--- a/leetcode/5-周赛/第419场周赛/3320. 统计能获胜的出招序列数.md
+++ b/leetcode/5-周赛/第419场周赛/3320. 统计能获胜的出招序列数.md
@@ -16,6 +16,8 @@
 - 时间复杂度: $O(3^{n})$， $n$ 为字符串 $s$ 的长度，理论上肯定小于这个复杂度，因为对于重复的状态只计算一次
 - 空间复杂度: $O(1)$
 
+##### Python3
+
 ```python
 class Solution:
     def countWinningSequences(self, s: str) -> int:
