--- a/algorithm/滑动窗口.md
+++ b/algorithm/滑动窗口.md
@@ -48,3 +48,5 @@ return ans
 
 1. [LCR 008. 长度最小的子数组](/leetcode/8-119经典题变种挑战/挑战%202：数组/LCR%20008.%20长度最小的子数组.md)
 2. [3. 无重复字符的最长子串](/leetcode/7-面试经典%20150%20题/3-滑动窗口/3.%20无重复字符的最长子串.md)
+3. [3090. 每个字符最多出现两次的最长子字符串](/leetcode/其他/3090.%20每个字符最多出现两次的最长子字符串.md)
+4. [1493. 删掉一个元素以后全为 1 的最长子数组](/leetcode/其他/1493.%20删掉一个元素以后全为%201%20的最长子数组.md)
